--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "build": "npm install && rimraf ./build && tsc",
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "",
